Fix message word wrapping, scroll to bottom of chat panel automatically

--- a/public/style.css
+++ b/public/style.css
@@ -165,7 +165,7 @@ canvas {
 
 .message .content {
 	flex: none;
-	word-break: break-all;
+	word-break: break-word;
 }
 
 .message-input {
@@ -175,6 +175,7 @@ canvas {
 	border: none;
 	box-shadow: 0px 0px 10px 0px rgb(50, 50, 50);
 	touch-action: auto;
+  margin-top: 8px;
 }
 
 .message-input:focus {
